--- a/14.3/style.css
+++ b/14.3/style.css
@@ -7,10 +7,9 @@ body {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 10px;
 }
 
 .card-image {
   display: block;
-  /* width: 200px;
-  height: 150px; */
 }
